--- a/index.html
+++ b/index.html
@@ -22,8 +22,22 @@
     
     <section id="landing-screen">
         <div id="title"><h1>Star <br> Karadeniz Pide</h1></div>
-        <div id="subtitle">QR Menü</div>
+        <div id="subtitle">Menü</div>
         <div id="test"><img src="images/downicon.png" alt="downicon" id="downicon"></div>
+    </section>
+
+    <section id="foods">
+        <div id="title-foods"><h1>Yiyeceklerimiz</h1></div>
+        <div class="food">
+            <img src="images/bafra.webp" alt=""> <br>
+            <label class="food-title" for=""><i>Bafra</i></label><br>
+            <label class="food-desc" for=""><i>(Kavrulmuş Kıyma, Soğan Ve Tereyağı)</i></label>
+        </div>
+        <div class="food">
+            <img src="images/bafra.webp" alt=""> <br>
+            <label class="food-title" for=""><i>Bafra</i></label><br>
+            <label class="food-desc" for=""><i>(Kavrulmuş Kıyma, Soğan Ve Tereyağı)</i></label>
+        </div>
     </section>
 
 
