--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
             <img src="images/bafra.webp" alt=""> <br>
             <label class="food-title" for=""><i>Bafra</i></label><br>
             <label class="food-desc" for=""><i>(Kavrulmuş Kıyma, Soğan Ve Tereyağı)</i></label>
+            <div class="food-price"><label class="price" for=""><b>220 TL</b></label></div>
         </div>
         <div class="food">
-            <img src="images/bafra.webp" alt=""> <br>
-            <label class="food-title" for=""><i>Bafra</i></label><br>
-            <label class="food-desc" for=""><i>(Kavrulmuş Kıyma, Soğan Ve Tereyağı)</i></label>
+            <img src="images/kusbasili-pide.webp" alt=""> <br>
+            <label class="food-title" for=""><i>Kuşbaşılı Pide</i></label><br>
+            <label class="food-desc" for=""><i>(%100 Dana Eti, Domates Ve Kekik)</i></label>
+            <div class="food-price"><label class="price" for=""><b>220TL</b></label></div>
         </div>
     </section>
 
