--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="landing-screen">
         <div id="title"><h1>Star <br> Karadeniz Pide</h1></div>
         <div id="subtitle">Menü</div>
-        <div id="test"><img src="images/downicon.png" alt="downicon" id="downicon"></div>
+        <div id="test"><a href="#foods"><img src="images/downicon.png" alt="downicon" id="downicon"></a></div>
     </section>
 
     <section id="foods">
