--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     
     <section id="landing-screen">
         <div id="title"><h1>Star <br> Karadeniz Pide</h1></div>
+        <div id="socials"><a id="facebook" href="https://www.facebook.com/starkaradenizpide/"><img src="images/facebook.webp" alt=""></a><a id="instagram" href="https://www.instagram.com/starkaradenizpide/"><img src="images/instagram.webp" alt=""></a></div>
         <div id="subtitle">Menü</div>
         <div id="test"><a href="#foods"><img src="images/downicon.png" alt="downicon" id="downicon"></a></div>
     </section>
