--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     
     <section id="landing-screen">
-        <div id="title"><h1>Star <br> Karadeniz Pide</h1></div>
+        <div id="title"><img src="images/logo.png" alt=""></div>
         <div id="socials"><a id="facebook" href="https://www.facebook.com/starkaradenizpide/"><img src="images/facebook.webp" alt=""></a><a id="instagram" href="https://www.instagram.com/starkaradenizpide/"><img src="images/instagram.webp" alt=""></a></div>
         <div id="subtitle">Menü</div>
         <div id="test"><a href="#foods"><img src="images/downicon.png" alt="downicon" id="downicon"></a></div>
@@ -33,17 +33,192 @@
             <img src="images/bafra.webp" alt=""> <br>
             <label class="food-title" for=""><i>Bafra</i></label><br>
             <label class="food-desc" for=""><i>(Kavrulmuş Kıyma, Soğan Ve Tereyağı)</i></label>
-            <div class="food-price"><label class="price" for=""><b>220 TL</b></label></div>
+            <div class="food-price"><label class="price" for="">220<i class="tl">TL</i></label></div>
         </div>
         <div class="food">
             <img src="images/kusbasili-pide.webp" alt=""> <br>
             <label class="food-title" for=""><i>Kuşbaşılı Pide</i></label><br>
             <label class="food-desc" for=""><i>(%100 Dana Eti, Domates Ve Kekik)</i></label>
-            <div class="food-price"><label class="price" for=""><b>220TL</b></label></div>
+            <div class="food-price"><label class="price" for="">220<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/kuskas.jpg" alt=""> <br>
+            <label class="food-title" for=""><i>Kuşbaşı Kaşarlı Pide</i></label><br>
+            <label class="food-desc" for=""><i>(%100 Dana Eti, Domates, Kekik Ve Kaşar)</i></label>
+            <div class="food-price"><label class="price" for="">220<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/kavurmali.webp" alt=""> <br>
+            <label class="food-title" for=""><i>Kavurmalı Pide</i></label><br>
+            <label class="food-desc" for=""><i>(Rize Kavurması Ve Tereyağı)</i></label>
+            <div class="food-price"><label class="price" for="">290<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/peyyum.jpg" alt=""> <br>
+            <label class="food-title" for=""><i>Peynirli Yumurtalı Pide</i></label><br>
+            <label class="food-desc" for=""><i>(Rize Kavurması Ve Tereyağı)</i></label>
+            <div class="food-price"><label class="price" for="">230<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/sebzeli-kasarli.jpg" alt=""> <br>
+            <label class="food-title" for=""><i>Sebzeli Kaşarlı Pide</i></label><br>
+            <label class="food-desc" for=""><i>(Kaşar Peyniri, Domates Ve Biber)</i></label>
+            <div class="food-price"><label class="price" for="">220<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/kavyum.jpg" alt=""> <br>
+            <label class="food-title" for=""><i>Kavurmalı Yumurtalı Pide</i></label><br>
+            <label class="food-desc" for=""><i>(Rize Kavurması, Tereyağı Ve Yumurta)</i></label>
+            <div class="food-price"><label class="price" for="">300<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/kapali-karisik.jpeg" alt=""> <br>
+            <label class="food-title" for=""><i>Karışık Pide</i></label><br>
+            <label class="food-desc" for=""><i>(Kavrulmuş Kıyma, Kaşar Ve Sucuk)</i></label>
+            <div class="food-price"><label class="price" for="">240<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/kapkav.webp" alt=""> <br>
+            <label class="food-title" for=""><i>Kapalı Kavurmalı Pide</i></label><br>
+            <label class="food-desc" for=""><i>(Rize Kavurması Ve Tereyağı)</i></label>
+            <div class="food-price"><label class="price" for="">300<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/pastirma-yum.jpeg" alt=""> <br>
+            <label class="food-title" for=""><i>Pastırmalı Yumurtalı Pide</i></label><br>
+            <label class="food-desc" for=""><i></i></label>
+            <div class="food-price"><label class="price" for="">300<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/kasarli.webp" alt=""> <br>
+            <label class="food-title" for=""><i>Kaşarlı Pide</i></label><br>
+            <label class="food-desc" for=""><i></i></label>
+            <div class="food-price"><label class="price" for="">210<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/kapalikiymali.jpeg" alt=""> <br>
+            <label class="food-title" for=""><i>Kıymalı Pide</i></label><br>
+            <label class="food-desc" for=""><i>(Kavrulmuş Kıyma, Soğan Ve Tereyağı)</i></label>
+            <div class="food-price"><label class="price" for="">220<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/kapalikiymali.jpeg" alt=""> <br>
+            <label class="food-title" for=""><i>Kıyma Kaşarlı Pide</i></label><br>
+            <label class="food-desc" for=""><i>(Kavrulmuş Kıyma, Soğan, Tereyağı Ve Kaşar)</i></label>
+            <div class="food-price"><label class="price" for="">220<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/sucukkasar.webp" alt=""> <br>
+            <label class="food-title" for=""><i>Sucuk Kaşarlı Pide</i></label><br>
+            <label class="food-desc" for=""><i></i></label>
+            <div class="food-price"><label class="price" for="">240<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/sebzekıyma.jpg" alt=""> <br>
+            <label class="food-title" for=""><i>Sebzeli Kıymalı Pide</i></label><br>
+            <label class="food-desc" for=""><i>(Kavrulmuş Kıyma, Soğan, Domates, Biber, Maydanoz)</i></label>
+            <div class="food-price"><label class="price" for="">240<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/Karadeniz Pide logo(1)_page-0001.jpg" alt=""> <br>
+            <label class="food-title" for=""><i>Star Special</i></label><br>
+            <label class="food-desc" for=""><i>(Rize Kavurma, Pastırma, Sucuk, Kaşar, Domates, Biber)</i></label>
+            <div class="food-price"><label class="price" for="">320<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/sucuklu.jpg" alt=""> <br>
+            <label class="food-title" for=""><i>Kapalı Sucuklu Pide</i></label><br>
+            <label class="food-desc" for=""><i></i></label>
+            <div class="food-price"><label class="price" for="">240<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/kiymali-pide-tek.webp" alt=""> <br>
+            <label class="food-title" for=""><i>Açık Kıymalı Pide</i></label><br>
+            <label class="food-desc" for=""><i>(Tereyağı ile Kavrulmuş Kıyma)</i></label>
+            <div class="food-price"><label class="price" for="">220<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/pastirmali-kasarli-pide.jpg" alt=""> <br>
+            <label class="food-title" for=""><i>Pastirmalı Kaşarlı Pide</i></label><br>
+            <label class="food-desc" for=""><i></i></label>
+            <div class="food-price"><label class="price" for="">290<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/kapali.webp" alt=""> <br>
+            <label class="food-title" for=""><i>Sebzeli Kıymalı Pide</i></label><br>
+            <label class="food-desc" for=""><i>(Kavurlmuş Kıyma, Domates, Biber Ve Maydanoz)</i></label>
+            <div class="food-price"><label class="price" for="">240<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/corba.jpg" alt=""> <br>
+            <label class="food-title" for=""><i>Çorba Çeşitleri</i></label><br>
+            <label class="food-desc" for=""><i>(Mercimek, Ezogelin)</i></label>
+            <div class="food-price"><label class="price" for="">80<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/firinda-sutlac.webp" alt=""> <br>
+            <label class="food-title" for=""><i>Fırın Sütlaç</i></label><br>
+            <label class="food-desc" for=""><i></i></label>
+            <div class="food-price"><label class="price" for="">90<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/kahvalti-tabagi-3-83e4.webp" alt=""> <br>
+            <label class="food-title" for=""><i>Kahvaltı Tabağı</i></label><br>
+            <label class="food-desc" for=""><i>(Siyah ve Yeşil Zeytin, Tereyağı, Bal, Likapa Reçeli, Tahin/Pekmez, Helva, Beyaz Peynir, Tel Peynir, Ezme, Haşlanmış Yumurta, Domates/Biber/Salatalık)</i></label>
+            <div class="food-price"><label class="price" for="">350<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/serpme.jpg" alt=""> <br>
+            <label class="food-title" for=""><i>Serpme Kahvaltı</i></label><br>
+            <label class="food-desc" for=""><i>(Siyah ve Yeşil Zeytin, Beyaz Peynir, Tel Peynir, Bal, Tereyağı, Likapa Reçeli, Ezme, Tahin/Pekmez, Helva, Sahanda Yumurta, Domates/Biber/Salatalık)</i></label>
+            <div class="food-price"><label class="price" for="">700<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/tabakavurma.jpg" alt=""> <br>
+            <label class="food-title" for=""><i>Tavada Rize Kavurma</i></label><br>
+            <label class="food-desc" for=""><i>(%100 Dana Kavurma ve Tereyağı)</i></label>
+            <div class="food-price"><label class="price" for="">290<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/tavakavyum.jpeg" alt=""> <br>
+            <label class="food-title" for=""><i>Tavada Rize Kavurma Yumurtalı</i></label><br>
+            <label class="food-desc" for=""><i></i></label>
+            <div class="food-price"><label class="price" for="">300<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/sucuklu_yumurta-764e66f1-1d63-4e81-8ebd-80262c5503aa.jpeg" alt=""> <br>
+            <label class="food-title" for=""><i>Sucuklu Yumurta</i></label><br>
+            <label class="food-desc" for=""><i></i></label>
+            <div class="food-price"><label class="price" for="">220<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/Muhlama.jpg" alt=""> <br>
+            <label class="food-title" for=""><i>Tek Kişilik Muhlama</i></label><br>
+            <label class="food-desc" for=""><i>(Mısır Unu, Tel/Kolot Peyniri ve Tereyağı)</i></label>
+            <div class="food-price"><label class="price" for="">190<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/coban.jpg" alt=""> <br>
+            <label class="food-title" for=""><i>Çoban Salata</i></label><br>
+            <label class="food-desc" for=""><i></i></label>
+        </div>
+        <div class="food">
+            <img src="images/sebzeli-sac-kavurma-8e21655b-b6d6-4150-a0d5-9d170bc7ed6b.webp" alt=""> <br>
+            <label class="food-title" for=""><i>Sebzeli Tava Kavurma</i></label><br>
+            <label class="food-desc" for=""><i>(Rize Kavurma, Soğan, Domates, Biber ve Tereyağı)</i></label>
+            <div class="food-price"><label class="price" for="">310<i class="tl">TL</i></label></div>
+        </div>
+        <div class="food">
+            <img src="images/karalahana-corbasi.webp" alt=""> <br>
+            <label class="food-title" for=""><i>Kara Lahana Çorbası</i></label><br>
+            <label class="food-desc" for=""><i>(Kara Lahana, İç Yağı, Barbunya ve Korkoti)</i></label>
+        </div>
+        <div class="food">
+            <img src="images/zeytinyagli_karalahana_sarmasi-019692d6-dd06-4bc2-9a9e-c5ca1d0903ec.webp" alt=""> <br>
+            <label class="food-title" for=""><i>Kara Lahana Sarması</i></label><br>
+            <label class="food-desc" for=""><i>(Kıymalı)</i></label>
         </div>
     </section>
-
-
 
 </body>
 </html>
